# sfizz-vst3

./: .gitmodules  CMakeLists.txt  README.md
cmake/: README.md
cmake/modules/: AddCommonOptions.cmake  AddVST3Options.cmake  PlatformToolset.cmake
pluginterfaces/: CMakeLists.txt
sfizz-vst/: CMakeLists.txt  sfizz-vst.cpp  sfizz-vst.h  version.h
